toolchain/internal/core/analysis/testdata/errors/naming/enum_annotation_not_camel.vdl
// format:off
// @expect: E102

@badAnn
enum Status {
  Active
}
